syntax = "proto3";

option csharp_namespace = "GrpcCRUDSample";

package sample;

service User {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc GetAllUsers (Empty) returns (GetAllUsersResponse);
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message Empty{}

message UserModel {
  int32 id = 1;
  string name = 2;
}

message AllUserModel {
  int32 id = 1;
  string name = 2;
  string unique_id = 3;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  AllUserModel  user = 1;
}

//message GetAllUsersRequest {
//}

message GetAllUsersResponse {
  repeated UserModel users = 1;
}

message CreateUserRequest {
  string name = 1;
}

message CreateUserResponse {
  int32 id = 1;
}

message UpdateUserRequest {
  UserModel user = 1;
}

message UpdateUserResponse {
  bool success = 1;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}